--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
         "autoprefixer": "^10.4.14",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^0.7.8",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
         "vite": "^4.5.3"
+    },
+    "dependencies": {
+        "pdfjs-dist": "^4.3.136",
+        "turn.js": "^1.0.2"
     }
 }
