--- a/resources/blueprints/collections/newsletter/newsletter.yaml
+++ b/resources/blueprints/collections/newsletter/newsletter.yaml
@@ -54,17 +54,22 @@ tabs:
                             replicator_preview: true
                             hide_display: false
                         -
-                          handle: news_link
+                          handle: news_pdf
                           field:
-                            input_type: text
-                            antlers: false
-                            type: text
-                            display: 'news link'
+                            mode: list
+                            container: assets
+                            restrict: false
+                            allow_uploads: true
+                            show_filename: true
+                            show_set_alt: true
+                            type: assets
+                            display: 'News pdf'
                             listable: hidden
                             instructions_position: above
                             visibility: visible
                             replicator_preview: true
                             hide_display: false
+                            max_files: 1
               type: replicator
               display: Content
               listable: hidden
