--- a/.env.example
+++ b/.env.example
@@ -39,10 +39,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
-MAIL_USERNAME=crypusgatia@cityeyehospital.or.ke
-MAIL_PASSWORD=pyfbzkvvrjcccsjd
+MAIL_USERNAME=youremail@gmail.com
+MAIL_PASSWORD=pyfbzkvvrjcccsjdffffe
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=crypusgatia@cityeyehospital.or.ke
+MAIL_FROM_ADDRESS=youremail@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
