--- a/resources/blueprints/collections/educational_material/educational_material.yaml
+++ b/resources/blueprints/collections/educational_material/educational_material.yaml
@@ -72,7 +72,7 @@ tabs:
                           handle: card_image
                           field:
                             max_files: 1
-                            mode: grid
+                            mode: list
                             container: assets
                             restrict: false
                             allow_uploads: true
