--- a/resources/blueprints/collections/outpatient-services/outpatient-service.yaml
+++ b/resources/blueprints/collections/outpatient-services/outpatient-service.yaml
@@ -70,12 +70,12 @@ tabs:
                             replicator_preview: true
                             hide_display: false
                         -
-                          handle: llink
+                          handle: link
                           field:
                             input_type: text
                             antlers: false
                             type: text
-                            display: Llink
+                            display: Link
                             listable: hidden
                             instructions_position: above
                             visibility: visible
